--- a/Main/assets/css/style.css
+++ b/Main/assets/css/style.css
@@ -29,6 +29,10 @@ p {
 .header h1 {
     display: inline-block;
     font-size: 48px;
+    color: #ffffff;
+}
+
+header h1 .seo {
     color: #d9dcd6;
 }
 
